--- a/PlataformaDKUCorp/PlataformaDKUCorp.csproj
+++ b/PlataformaDKUCorp/PlataformaDKUCorp.csproj
@@ -116,6 +116,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sesion.cs" />
     <Compile Include="ValidacionesTxt.cs" />
     <EmbeddedResource Include="Interfaz Maestro\DatosCuestionario.resx">
       <DependentUpon>DatosCuestionario.cs</DependentUpon>
