--- a/PlataformaDKUCorp/PlataformaDKUCorp.csproj
+++ b/PlataformaDKUCorp/PlataformaDKUCorp.csproj
@@ -47,6 +47,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conexion a BD\ConexionBD.cs" />
+    <Compile Include="Interfaz Alumno\asigAlumno.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Interfaz Alumno\asigAlumno.Designer.cs">
+      <DependentUpon>asigAlumno.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Interfaz Alumno\MenuAlumno.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Interfaz Alumno\MenuAlumno.Designer.cs">
+      <DependentUpon>MenuAlumno.cs</DependentUpon>
+    </Compile>
     <Compile Include="Interfaz Maestro\DatosCuestionario.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -118,6 +130,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sesion.cs" />
     <Compile Include="ValidacionesTxt.cs" />
+    <EmbeddedResource Include="Interfaz Alumno\asigAlumno.resx">
+      <DependentUpon>asigAlumno.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Interfaz Alumno\MenuAlumno.resx">
+      <DependentUpon>MenuAlumno.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Interfaz Maestro\DatosCuestionario.resx">
       <DependentUpon>DatosCuestionario.cs</DependentUpon>
     </EmbeddedResource>
