--- a/PlataformaDKUCorp/PlataformaDKUCorp.csproj
+++ b/PlataformaDKUCorp/PlataformaDKUCorp.csproj
@@ -183,5 +183,8 @@
   <ItemGroup>
     <None Include="Resources\javiergod.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\save_FILL0_wght400_GRAD0_opsz48.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
