--- a/PlataformaDKUCorp/PlataformaDKUCorp.csproj
+++ b/PlataformaDKUCorp/PlataformaDKUCorp.csproj
@@ -47,6 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conexion a BD\ConexionBD.cs" />
+    <Compile Include="Interfaz Maestro\DesignCuestionario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Interfaz Maestro\DesignCuestionario.designer.cs">
+      <DependentUpon>DesignCuestionario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Interfaz Alumno\asigAlumno.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,12 +70,6 @@
     </Compile>
     <Compile Include="Interfaz Maestro\DatosCuestionario.Designer.cs">
       <DependentUpon>DatosCuestionario.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Interfaz Maestro\DiseñoCuestionario.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Interfaz Maestro\DiseñoCuestionario.Designer.cs">
-      <DependentUpon>DiseñoCuestionario.cs</DependentUpon>
     </Compile>
     <Compile Include="Interfaz Maestro\Asignatura.cs">
       <SubType>Form</SubType>
@@ -130,6 +130,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sesion.cs" />
     <Compile Include="ValidacionesTxt.cs" />
+    <EmbeddedResource Include="Interfaz Maestro\DesignCuestionario.resx">
+      <DependentUpon>DesignCuestionario.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Interfaz Alumno\asigAlumno.resx">
       <DependentUpon>asigAlumno.cs</DependentUpon>
     </EmbeddedResource>
@@ -138,9 +141,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Interfaz Maestro\DatosCuestionario.resx">
       <DependentUpon>DatosCuestionario.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Interfaz Maestro\DiseñoCuestionario.resx">
-      <DependentUpon>DiseñoCuestionario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Interfaz Maestro\MenuMaestro.resx">
       <DependentUpon>MenuMaestro.cs</DependentUpon>
