--- a/PlataformaDKUCorp/PlataformaDKUCorp.csproj
+++ b/PlataformaDKUCorp/PlataformaDKUCorp.csproj
@@ -47,6 +47,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conexion a BD\ConexionBD.cs" />
+    <Compile Include="Gestion de Usuario\Datos.cs" />
+    <Compile Include="Interfaz Maestro\prueba.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Interfaz Maestro\prueba.Designer.cs">
+      <DependentUpon>prueba.cs</DependentUpon>
+    </Compile>
     <Compile Include="Interfaz Maestro\DesignCuestionario.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -65,11 +72,11 @@
     <Compile Include="Interfaz Alumno\MenuAlumno.Designer.cs">
       <DependentUpon>MenuAlumno.cs</DependentUpon>
     </Compile>
-    <Compile Include="Interfaz Maestro\DatosCuestionario.cs">
+    <Compile Include="Interfaz Maestro\DatosSim.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Interfaz Maestro\DatosCuestionario.Designer.cs">
-      <DependentUpon>DatosCuestionario.cs</DependentUpon>
+    <Compile Include="Interfaz Maestro\DatosSim.Designer.cs">
+      <DependentUpon>DatosSim.cs</DependentUpon>
     </Compile>
     <Compile Include="Interfaz Maestro\Asignatura.cs">
       <SubType>Form</SubType>
@@ -130,6 +137,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sesion.cs" />
     <Compile Include="ValidacionesTxt.cs" />
+    <EmbeddedResource Include="Interfaz Maestro\prueba.resx">
+      <DependentUpon>prueba.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Interfaz Maestro\DesignCuestionario.resx">
       <DependentUpon>DesignCuestionario.cs</DependentUpon>
     </EmbeddedResource>
@@ -139,8 +149,8 @@
     <EmbeddedResource Include="Interfaz Alumno\MenuAlumno.resx">
       <DependentUpon>MenuAlumno.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Interfaz Maestro\DatosCuestionario.resx">
-      <DependentUpon>DatosCuestionario.cs</DependentUpon>
+    <EmbeddedResource Include="Interfaz Maestro\DatosSim.resx">
+      <DependentUpon>DatosSim.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Interfaz Maestro\MenuMaestro.resx">
       <DependentUpon>MenuMaestro.cs</DependentUpon>
