--- a/PlataformaDKUCorp/PlataformaDKUCorp.csproj
+++ b/PlataformaDKUCorp/PlataformaDKUCorp.csproj
@@ -33,8 +33,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,6 +57,24 @@
   <ItemGroup>
     <Compile Include="Conexion a BD\ConexionBD.cs" />
     <Compile Include="Gestion de Usuario\Datos.cs" />
+    <Compile Include="Interfaz Alumno\Est_Simulacion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Interfaz Alumno\Est_Simulacion.Designer.cs">
+      <DependentUpon>Est_Simulacion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Interfaz Maestro\AgregarArchivo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Interfaz Maestro\AgregarArchivo.Designer.cs">
+      <DependentUpon>AgregarArchivo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Interfaz Maestro\ArchivosAdj.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Interfaz Maestro\ArchivosAdj.Designer.cs">
+      <DependentUpon>ArchivosAdj.cs</DependentUpon>
+    </Compile>
     <Compile Include="Interfaz Maestro\prueba.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -133,10 +160,56 @@
     <Compile Include="Interfaz Maestro\MenuMaestro.Designer.cs">
       <DependentUpon>MenuMaestro.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\Archivo.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Carrera.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Clase.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Estudiante.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Maestro.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Matricula.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Model1.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Model1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Model1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Simulacion.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Usuario.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sesion.cs" />
+    <Compile Include="Simulacion.cs" />
     <Compile Include="ValidacionesTxt.cs" />
+    <EmbeddedResource Include="Interfaz Alumno\Est_Simulacion.resx">
+      <DependentUpon>Est_Simulacion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Interfaz Maestro\ArchivosAdj.resx">
+      <DependentUpon>ArchivosAdj.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Interfaz Maestro\prueba.resx">
       <DependentUpon>prueba.cs</DependentUpon>
     </EmbeddedResource>
@@ -189,6 +262,14 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EntityDeploy Include="Model\Model1.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Model\Model1.edmx.diagram">
+      <DependentUpon>Model1.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -213,6 +294,23 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\save_FILL0_wght400_GRAD0_opsz48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Model\Model1.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Model1.Context.cs</LastGenOutput>
+      <DependentUpon>Model1.edmx</DependentUpon>
+    </Content>
+    <Content Include="Model\Model1.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.cs</LastGenOutput>
+    </Content>
+    <Content Include="Resources\arrow_forward_ios_FILL0_wght400_GRAD0_opsz48.png" />
+    <None Include="Resources\arrow_forward_ios_FILL0_wght400_GRAD0_opsz481.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
